# luals-docs-gen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml
src/: bin.rs  error.rs  generator.rs  lib.rs  parser.rs
src/generator/: library.rs  options.rs  render.rs  toc.rs
src/parser/: json.rs  json_to_types.rs  lua_parser.rs  types.rs
test/: book.toml
test/definitions/: config.json
test/src/: README.md  SUMMARY.md
test/src/API/: acme.md
test/src/API/acme/: acme.SomeClass.md  acme.SomeOtherClass.md
test/src/API/modules/: table.md
