[package]
name = "luals-docs-gen"
version = "0.2.1"
edition = "2021"

[dependencies]
reqwest = { version = "^0.12", default-features = false, features = ["blocking", "default-tls"] }
decompress = { version = "^0.6", default-features = false, features = ["zip", "targz" ] }
regex = { version = "^1.11" }
clap = { version = "^4.5", features = ["derive"] }
itertools = "^0.14"
pest = "^2.7"
pest_derive = "^2.7"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tempdir = "^0.3"
thiserror = "^2.0"
url = "^2.5"

[lib]
name = "luals_docs_gen"
path = "src/lib.rs"

[[bin]]
name = "luals_docs_gen"
path = "src/bin.rs"